home-cluster/services/cockpit-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockpit-proxy
spec:
  type: ClusterIP
  selector:
    app: cockpit-proxy
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cockpit-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cockpit-proxy
  template:
    metadata:
      labels:
        app: cockpit-proxy
    spec:
      containers:
        - name: cockpit-proxy
          image: nginx:1.25
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx
              readOnly: true
              name: conf
      volumes:
        - name: conf
          configMap:
            name: cockpit-proxy
            items:
              - key: nginx.conf
                path: nginx.conf
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cockpit-proxy
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "zhaohai.li"
    - "*.zhaohai.li"
    secretName: tls-zhaohai-li-ingress-dns
  rules:
    - host: nas.zhaohai.li
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cockpit-proxy
                port:
                  number: 80
