home-cluster/services/cockpit.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockpit
spec:
  type: ExternalName
  externalName: nas.local
  ports:
  - name: http
    port: 9090
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cockpit
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "*.zhaohai.li"
    secretName: tls-zhaohai-li-ingress-dns
  rules:
  - host: nas.zhaohai.li
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cockpit
            port:
              number: 9090
