home-cluster/services/dev-vm.yaml
# selinux: $ semanage port -a -t ssh_port_t -p tcp 32222
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-vm
  labels:
    name: dev-vm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-vm
  template:
    metadata:
      labels:
        app: dev-vm
    spec:
      containers:
      - name: dev-vm
        image: qemux/qemu
        ports:
          - containerPort: 22
            name: ssh
            protocol: TCP
          - containerPort: 8006
            name: http
            protocol: TCP
          - containerPort: 5900
            name: vnc
            protocol: TCP
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          privileged: true
        volumeMounts:
        - mountPath: /storage
          name: storage
        - mountPath: /dev/kvm
          name: dev-kvm
        - mountPath: /dev/net/tun
          name: dev-tun
      terminationGracePeriodSeconds: 120
      volumes:
      - name: storage
        hostPath:
          path: /mnt/data/config/dev-vm
      - hostPath:
          path: /dev/kvm
        name: dev-kvm
      - hostPath:
          path: /dev/net/tun
          type: CharDevice
        name: dev-tun
---
apiVersion: v1
kind: Service
metadata:
  name: dev-vm
spec:
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ports:
    - name: http
      port: 8006
      protocol: TCP
      targetPort: 8006
    - name: vnc
      port: 5900
      protocol: TCP
      targetPort: 5900
  selector:
    app: dev-vm
---
apiVersion: v1
kind: Service
metadata:
  name: dev-vm-ssh
spec:
  type: NodePort
  ports:
    - name: ssh
      port: 22
      protocol: TCP
      targetPort: 22
      nodePort: 32222
  selector:
    app: dev-vm
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-vm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "cert-zhaohai-li-dns"
spec:
  tls:
  - hosts:
    - "*.zhaohai.li"
    secretName: tls-zhaohai-li-ingress-dns
  rules:
  - host: "dev-vm-console-p.zhaohai.li"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-vm
            port:
              number: 8006
