home-cluster/services/gotosocial.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mblog
  labels:
    app: mblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mblog
  template:
    metadata:
      labels:
        app: mblog
    spec:
      terminationGracePeriodSeconds: 3600
      containers:
      - name: mblog
        image: superseriousbusiness/gotosocial:0.17.3
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /gotosocial/storage
          name: config
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 256Mi
      volumes:
      - name: config
        hostPath:
          path: /mnt/data/config/gotosocial
---
apiVersion: v1
kind: Service
metadata:
  name: mblog
spec:
  type: ClusterIP
  selector:
    app: mblog
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mblog
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "cert-zhaohai-li-dns"
spec:
  tls:
  - hosts:
    - "*.zhaohai.li"
    secretName: tls-zhaohai-li-ingress-dns
  rules:
  - host: "mblog.zhaohai.li"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mblog
            port:
              number: 8080
