home-cluster/services/ha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot
  labels:
    app: iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot
  template:
    metadata:
      labels:
        app: iot
    spec:
      containers:
      - name: iot
        image: ghcr.io/home-assistant/home-assistant:stable
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8123
          hostPort: 8123
          protocol: TCP
        volumeMounts:
        - mountPath: /dev/ttyACM0
          name: dev-dongle
        - mountPath: /config
          name: config
        securityContext:
          privileged: true
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 512Mi
      hostNetwork: true
      volumes:
      - name: dev-dongle
        hostPath:
          path: /dev/ttyACM0
      - name: config
        hostPath:
          path: /mnt/data/config/ha
---
apiVersion: v1
kind: Service
metadata:
  name: iot
spec:
  type: ExternalName
  externalName: nas.local
  ports:
    - name: http
      port: 8123
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot
  annotations:
   cert-manager.io/issuer: "cert-manager/cert-zhaohai-li-dns"
spec:
  tls:
  - hosts:
    - "zhaohai.li"
    - "*.zhaohai.li"
    secretName: tls-zhaohai-li-ingress-dns
  rules:
  - host: "iot.zhaohai.li"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iot
            port:
              number: 8123
