home-cluster/services/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media
  labels:
    app: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media
  template:
    metadata:
      labels:
        app: media
    spec:
      containers:
      - name: media
        image: jellyfin/jellyfin:10.8.13-1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8096
          protocol: TCP
        volumeMounts:
        - mountPath: /dev/dri
          name: dev-dri
        - mountPath: /media
          name: media
        - mountPath: /config
          name: config
        - mountPath: /cache
          name: cache
        securityContext:
          privileged: true
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 512Mi
      volumes:
      - name: dev-dri
        hostPath:
          path: /dev/dri
      - name: media
        hostPath:
          path: /mnt/data/media
      - name: config
        hostPath:
          path: /mnt/data/config/jellyfin/config
      - name: cache
        hostPath:
          path: /mnt/data/config/jellyfin/cache
---
apiVersion: v1
kind: Service
metadata:
  name: media
spec:
  type: ClusterIP
  selector:
    app: media
  ports:
  - name: http
    port: 8096
    protocol: TCP
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/issuer: "cert-manager/cert-zhaohai-li-dns"
spec:
  tls:
  - hosts:
    - "zhaohai.li"
    - "*.zhaohai.li"
  rules:
  - host: "media.zhaohai.li"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: media
            port:
              number: 8096
