home-cluster/services/metatube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metatube
  labels:
    app: metatube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metatube
  template:
    metadata:
      labels:
        app: metatube
    spec:
      terminationGracePeriodSeconds: 3600
      containers:
      - name: metatube
        image: metatube/metatube-server
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: metatube
spec:
  type: ClusterIP
  selector:
    app: metatube
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metatube
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "cert-zhaohai-li-dns"
spec:
  tls:
  - hosts:
    - "*.zhaohai.li"
  rules:
  - host: "metatube-p.zhaohai.li"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metatube
            port:
              number: 8080
