home-cluster/services/note.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note
  labels:
    app: note
spec:
  replicas: 1
  selector:
    matchLabels:
      app: note
  template:
    metadata:
      labels:
        app: note
    spec:
      terminationGracePeriodSeconds: 3600
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: note
        image: nocodb/nocodb:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/localtime
          name: localtime
          readOnly: true
        - mountPath: /usr/share/zoneinfo
          name: zoneinfo
          readOnly: true
        - mountPath: /usr/app/data/
          name: data
      volumes:
      - name: data
        hostPath:
          path: /mnt/data/config/nocodb
      - name: zoneinfo
        hostPath:
          path: /usr/share/zoneinfo
      - name: localtime
        hostPath:
          path: /etc/localtime
---
apiVersion: v1
kind: Service
metadata:
  name: note
spec:
  type: ClusterIP
  selector:
    app: note
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: note
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "cert-zhaohai-li-dns"
spec:
  tls:
  - hosts:
    - "*.zhaohai.li"
  rules:
  - host: "note.zhaohai.li"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: note
            port:
              number: 8080
