home-cluster/services/openwebui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
  labels:
    app: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
    spec:
      terminationGracePeriodSeconds: 3600
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
      containers:
      - name: openwebui
        image: ghcr.io/open-webui/open-webui:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /app/backend/data
          name: data
      volumes:
      - name: data
        hostPath:
          path: /mnt/data/config/openwebui
---
apiVersion: v1
kind: Service
metadata:
  name: openwebui
spec:
  type: ClusterIP
  selector:
    app: openwebui
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
spec:
  rules:
  - host: "llm.zhaohai.li"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openwebui
            port:
              number: 80
