home-cluster/services/photos-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photos-test
  labels:
    app: photos-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photos-test
  template:
    metadata:
      labels:
        app: photos-test
    spec:
      terminationGracePeriodSeconds: 3600
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: photos-test
        image: ghcr.io/googollee/photoview:sha-41cbbd3
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/localtime
          name: localtime
          readOnly: true
        - mountPath: /usr/share/zoneinfo
          name: zoneinfo
          readOnly: true
        - mountPath: /media/photos/for_test
          name: photos
          readOnly: true
        - mountPath: /home/photoview
          name: data
        - mountPath: /dev/dri
          name: dev-dri
        securityContext:
          privileged: true
      volumes:
      - name: dev-dri
        hostPath:
          path: /dev/dri
      - name: data
        hostPath:
          path: /mnt/data/config/photoview-test
      - name: photos
        hostPath:
          path: /mnt/data/media/photos/for_test
      - name: zoneinfo
        hostPath:
          path: /usr/share/zoneinfo
      - name: localtime
        hostPath:
          path: /etc/localtime
---
apiVersion: v1
kind: Service
metadata:
  name: photos-test
spec:
  type: ClusterIP
  selector:
    app: photos-test
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photos-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "cert-zhaohai-li-dns"
spec:
  tls:
  - hosts:
    - "*.zhaohai.li"
  rules:
  - host: "photos-test.zhaohai.li"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photos-test
            port:
              number: 80
