home-cluster/services/photos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photos
  labels:
    app: photos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photos
  template:
    metadata:
      labels:
        app: photos
    spec:
      terminationGracePeriodSeconds: 3600
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
      containers:
      - name: photos
        image: photoview/photoview:master
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/localtime
          name: localtime
          readOnly: true
        - mountPath: /usr/share/zoneinfo
          name: zoneinfo
          readOnly: true
        - mountPath: /media/photos/Googol图库
          name: photos
          readOnly: true
        - mountPath: /home/photoview
          name: data
        - mountPath: /dev/dri
          name: dev-dri
        securityContext:
          privileged: true
      volumes:
      - name: dev-dri
        hostPath:
          path: /dev/dri
      - name: data
        hostPath:
          path: /mnt/data/config/photoview
      - name: photos
        hostPath:
          path: /mnt/data/media/photos/Googol图库
      - name: zoneinfo
        hostPath:
          path: /usr/share/zoneinfo
      - name: localtime
        hostPath:
          path: /etc/localtime
---
apiVersion: v1
kind: Service
metadata:
  name: photos
spec:
  type: ClusterIP
  selector:
    app: photos
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photos
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  rules:
  - host: "photos.zhaohai.li"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photos
            port:
              number: 8000
