home-cluster/services/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik-dashboard
spec:
  type: ClusterIP
  ports:
  - name: traefik
    port: 9000
    targetPort: traefik
    protocol: TCP
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-webauth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "zhaohai.li"
    - "*.zhaohai.li"
    secretName: tls-zhaohai-li-ingress-dns
  rules:
    - host: gateway.zhaohai.li
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: webauth
  namespace: kube-system
spec:
  basicAuth:
    secret: webauth
