home-cluster/services/wan-to-lan.yaml
apiVersion: v1
kind: Service
metadata:
  name: w2l-proxy
  namespace: kube-system
spec:
  type: ClusterIP
  selector:
    app: w2l-proxy
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: w2l-proxy
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: w2l-proxy
  template:
    metadata:
      labels:
        app: w2l-proxy
    spec:
      containers:
      - name: w2l-proxy
        image: nginx:1.25
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: conf
          mountPath: /etc/nginx
          readOnly: true
        - name: webauth
          mountPath: /etc/auth
          readOnly: true
      volumes:
      - name: conf
        configMap:
          name: w2l-proxy
          items:
          - key: nginx.conf
            path: nginx.conf
      - name: webauth
        secret:
          secretName: webauth
          items:
          - key: users
            path: users
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: w2l-proxy
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: wansecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "zhaohai.li"
    - "*.zhaohai.li"
    secretName: tls-zhaohai-li-ingress-dns
  rules:
  - host: '*.zhaohai.li'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: w2l-proxy
            port:
              number: 80
